gcc-defaults (1.67) UNRELEASED; urgency=low

  * Add build-dependency on gnat-4.3-base.

 -- Matthias Klose <doko@debian.org>  Wed, 26 Mar 2008 22:00:35 +0100

gcc-defaults (1.66) unstable; urgency=low

  [Arthur Loiret]
  * Build multilib packages for mips and mipsel.

  [Matthias Klose]
  * Make GCC-4.3 the default on all architectures except alpha, amd64,
    hppa, i386.
    - alpha and hppa show regressions in the glibc testsuite.
    - amd64 and i386 have a patch in debian not supported upstream, and
      changing code generation.

 -- Matthias Klose <doko@debian.org>  Sun, 23 Mar 2008 18:24:47 +0100

gcc-defaults (1.64) unstable; urgency=low

  [Matthias Klose]
  * gcc: Remove dangling FAQ symlink. Closes: #453812.
  * gij: Update conflict with java-gcj-compat,
    provide java*-runtime-headless instead of java*-runtime.
  * Depend on the packages of the GCC-4.2.3 release.
  * Tighten dependencies for gnat packages.

  [Ludovic Brenta]
  * libgnatvsn-dev, libgnatprj-dev: new packages; depend on the
    corresponding packages from gnat-4.3.
  * Make gnat-4.3 the default on all architectures.
  * gnat: install documentation in /usr/share/doc/gnat; do not symlink
    to cpp and do not depend on cpp (Ada does not need a C
    preprocessor).

  [Arthur Loiret]
  * gdc: Make gdc-4.2 the default on hurd-i386.

 -- Ludovic Brenta <lbrenta@debian.org>  Wed, 12 Mar 2008 22:32:44 +0100

gcc-defaults (1.63) unstable; urgency=low

  * Make gfortran-4.3 the default on all architectures.
  * Make gij-4.3/gcj-4.3 the default on all architectures except alpha.

 -- Matthias Klose <doko@debian.org>  Sun, 20 Jan 2008 17:17:53 +0100

gcc-defaults (1.62) unstable; urgency=low

  * Dont build libgcj-bc on the Hurd (Michael Banck). Closes: #445279.
  * (Build-)depend on gcc-4.2 (>= 4.2.2-3).
  * Make gpc-2.1 based on GCC-4.1 the default.
  * Make GCC-4.2 the default on m68k. Closes: #451190.
  * Add gdc, make gdc-4.1 the default (Arthur Loiret). Closes: #456596.
